--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title id="docTitle">NewBingGoGo:聊天啦啦啦啦</title>
+    <title id="docTitle">快来问我点问题吧！</title>
     <link rel="stylesheet" href="./css/github-markdown-css.css">
     <link rel="stylesheet" href="./css/katex.min.css">
     <link rel="stylesheet" href="./css/highlight.js.default.min.css">
@@ -38,7 +38,7 @@
         <img src="./img/nasapod128x128.png" alt="图标">
         <div id='head-img-div-h2-img'>
             <h2>NewBingGoGo</h2>
-            <h3 id="goGoSubtitle">想发什么呢？让我帮你！</h3>
+            <h3 id="goGoSubtitle">TestPageBy.Jellow</h3>
         </div>
     </div>
     <div id='head-li-div'>
@@ -84,7 +84,7 @@
 <div id="body">
     <div id="body-top"></div>
     <div style="text-align: center;">
-        <h1 id="server-h1">NewBingGoGo</h1>
+        <h1 id="server-h1">TestPageBy.Jellow(230608)</h1>
         <h2 id="server-h2">简单开始和NewBing聊天</h2>
         <p  id="server-p"></p>
     </div>
