--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -37,8 +37,8 @@
     <div id='head-img-div'>
         <img src="./img/nasapod128x128.png" alt="图标">
         <div id='head-img-div-h2-img'>
-            <h2>NewBingGoGo</h2>
-            <h3 id="goGoSubtitle">TestPageBy.Jellow</h3>
+            <h2>Ai Chatting</h2>
+            <h3>Test Page By.Jellow</h3>
         </div>
     </div>
     <div id='head-li-div'>
