--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -35,7 +35,7 @@
 <div id="background"></div>
 <div id="head">
     <div id='head-img-div'>
-        <img src="./img/nasapod128x128.png" alt="图标">
+<!--         <img src="./img/nasapod128x128.png" alt="图标"> -->
         <div id='head-img-div-h2-img'>
             <h2>Ai Chatting</h2>
             <h3>Test Page By.Jellow</h3>
