--- a/src/main/resources/web/DrawImg.html
+++ b/src/main/resources/web/DrawImg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <title id="docTitle">NewBingGoGo:画图</title>
+  <title>画图</title>
   <link rel="stylesheet" href="./css/DrawImg.css">
   <script src="./js/DrawImg.js" type="module"></script>
   <script src="./js/other/stats.js" async="async"></script>
@@ -25,10 +25,10 @@
 <div id="background" class="b"></div>
 <div id="head">
   <div id='head-img-div'>
-    <img src="./img/nasapod128x128.png" alt="图标">
+<!--     <img src="./img/nasapod128x128.png" alt="图标"> -->
     <div id='head-img-div-h2-img'>
-      <h2>NewBingGoGo</h2>
-      <h3 id="goGoSubtitle">想画什么呢？我来帮你！</h3>
+      <h2>AIGC</h2>
+      <h3>想画什么呢？我来帮你！</h3>
     </div>
   </div>
   <div id='head-li-div'>
