--- a/src/main/resources/web/Write.html
+++ b/src/main/resources/web/Write.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title id="docTitle">NewBingGoGo:创作</title>
+    <title>创作</title>
     <link rel="stylesheet" href="./css/github-markdown-css.css">
     <link rel="stylesheet" href="./css/katex.min.css">
     <link rel="stylesheet" href="./css/highlight.js.default.min.css">
@@ -34,10 +34,10 @@
 <div id="background" class="b"></div>
 <div id="head">
     <div id='head-img-div'>
-        <img src="./img/nasapod128x128.png" alt="图标">
+<!--         <img src="./img/nasapod128x128.png" alt="图标"> -->
         <div id='head-img-div-h2-img'>
-            <h2>NewBingGoGo</h2>
-            <h3 id="goGoSubtitle">想创作什么呢？我来帮你！</h3>
+            <h2>开始写垃圾文章！</h2>
+            <h3 >想创作什么呢？我来帮你！</h3>
         </div>
     </div>
     <div id='head-li-div'>
