--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -36,7 +36,7 @@
 <div id="head">
     <div id='head-img-div'>
 <!--         <img src="./img/nasapod128x128.png" alt="图标"> -->
-        <div id='head-img-div-h2-img'>
+        <div id='head-img-div-h2-img' onClick="location.reload()">
             <h2>Ai Chatting</h2>
             <h3>Test Page By.Jellow</h3>
         </div>
