--- a/src/main/resources/web/230608.html
+++ b/src/main/resources/web/230608.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title >快来问我点问题吧！</title>
+    <title >Page By Jellow</title>
     <link rel="stylesheet" href="./css/github-markdown-css.css">
     <link rel="stylesheet" href="./css/katex.min.css">
     <link rel="stylesheet" href="./css/highlight.js.default.min.css">
